kubernetes/istio/request-auth-internal-1.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: internal-api-1-authn
spec:
  selector:
    matchLabels:
      app: internal-api-service-1
  jwtRules:
  - issuer: "http://192.168.1.130:8080/realms/kubernetes-zerotrust"
    jwksUri: "http://192.168.1.130:8080/realms/kubernetes-zerotrust/protocol/openid-connect/certs"
