kubernetes/istio/request-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-auth
  namespace: default
spec:
  selector:
    matchLabels:
      app: frontend-service
  jwtRules:
  - issuer: "http://192.168.1.130:8080/realms/zerotrust-demo"
    jwksUri: "http://192.168.1.130:8080/realms/zerotrust-demo/protocol/openid-connect/certs"
