kubernetes/istio/authz-external-1.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: external-cloud-1-authz
spec:
  selector:
    matchLabels:
      app: external-cloud-service-1
  action: ALLOW
  rules:
  - when:
    - key: request.auth.claims[realm_access][roles]
      values:
      - "user"
      - "admin"
