kubernetes/istio/authz-internal-2.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: internal-api-1-authz
spec:
  selector:
    matchLabels:
      app: internal-api-service-1
  action: ALLOW
  rules:
  - when:
    - key: request.auth.claims[realm_access][roles]
      values:
      - "user"
      - "admin"
